tests/algorithms/x/Java/data_structures/heap/randomized_heap.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:4: error: generic array creation
    static java.util.Map<String,Integer>[] nodes = new java.util.Map<String,Integer>[0];
                                                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:39: error: incompatible types: String cannot be converted to int
nodes[r1]["left"] = ((int)(((java.util.Map)nodes[r1])).getOrDefault("right", 0));
          ^
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:39: error: array required, but Map<String,Integer> found
nodes[r1]["left"] = ((int)(((java.util.Map)nodes[r1])).getOrDefault("right", 0));
         ^
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:40: error: incompatible types: String cannot be converted to int
nodes[r1]["right"] = tmp_1;
          ^
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:40: error: array required, but Map<String,Integer> found
nodes[r1]["right"] = tmp_1;
         ^
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:42: error: incompatible types: String cannot be converted to int
nodes[r1]["left"] = merge((int)(((int)(((java.util.Map)nodes[r1])).getOrDefault("left", 0))), r2);
          ^
/tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java:42: error: array required, but Map<String,Integer> found
nodes[r1]["left"] = merge((int)(((int)(((java.util.Map)nodes[r1])).getOrDefault("left", 0))), r2);
         ^
Note: /tmp/TestJavaTranspiler_Algorithms_Golden216_randomized_heap652621915/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
